routers cleanup, added gcp tts
